Demos: fixes jump when close global nav panel on iOS

--- a/docs/_assets/css/jqm-demos.css
+++ b/docs/_assets/css/jqm-demos.css
@@ -540,7 +540,7 @@ body, .jqm-demos  {
 	-moz-box-shadow: none;
 	box-shadow: none;
 }
-.ui-panel-content-wrap-position-left {
+.ui-panel-content-wrap-position-left.ui-panel-content-wrap-open {
 	-webkit-box-shadow: -5px 0px 5px rgba(0,0,0,.10);
 	-moz-box-shadow: -5px 0px 5px rgba(0,0,0,.10);
 	box-shadow: -5px 0px 5px rgba(0,0,0,.10);
